<resources>
    <string name="app_name">BChat</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="login_button_ingresar">ingresar</string>
    <string name="login_editText_passwd">Contraseña</string>
    <string name="login_editText_email">Ingresa tu dirección de email</string>
    <string name="textView_recordar">Recordar contraseña</string>
    <string name="textView_registrase">Registrarse</string>
    <string name="textView_olvido">Olvido su contraseña?</string>
    <string name="Login_button_ingresarconface">Iniciar con Facebook</string>
    <string name="title_activity_splash_screen">BChat</string>
    <string name="register_button_email">Email</string>
    <string name="register_button_passwd">Contraseña</string>
    <string name="login_button_registrarse">Registrarse</string>
    <string name="register_button_crear">Crear cuenta</string>
    <string name="title_activity_perfil">PerfilActivity</string>
    <string name="title_activity_chat_room">ChatRoomActivity</string>
    <string name="perfil_textView_nombre">Nombre:</string>
    <string name="perfil_textView_edad">Edad:</string>
    <string name="perfil_textView_sexo">Sexo:</string>
    <string name="perfil_textView_intereses">Intereses:</string>
    <string name="perfil_textView_profesion">Profesión:</string>
    <string name="perfil_textView_idiomas">Idiomas:</string>
    <string name="perfil_textView_creencias">Creencias Religiosas:</string>
    <string name="perfil_textView_nacimiento">Fecha de Nacimiento:</string>
    <string name="perfil_textView_nacio">Nacio en:</string>
    <string name="title_activity_web">WebActivity</string>
    <string name="title_activity_">Activity</string>
</resources>
