<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ff0281ff">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/login_editText_email"
            android:hint="@string/login_editText_email"

            android:layout_marginTop="52dp"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/txtdbPasswd"
            android:layout_toStartOf="@+id/txtdbPasswd"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/login_editText_password"
            android:hint="@string/login_editText_passwd"
            android:layout_below="@+id/login_editText_email"
            android:layout_alignLeft="@+id/login_editText_email"
            android:layout_alignStart="@+id/login_editText_email"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:layout_gravity="center_horizontal" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <Button
                android:layout_width="325dp"
                android:layout_height="wrap_content"
                android:text="@string/login_button_ingresar"
                android:id="@+id/login_button_ingresar"

                android:layout_alignTop="@+id/login_button_registrarse"
                android:layout_toLeftOf="@+id/txtdbPasswd"
                android:layout_toStartOf="@+id/txtdbPasswd"
                android:layout_gravity="center_horizontal"
                android:focusable="false"
                android:background="#ff21a3ff" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="325dp"
                android:layout_height="50dp"
                android:id="@+id/login_button_registrarse"
                android:text="@string/login_button_registrarse"
                android:onClick="clicRegistrarse"
                android:layout_above="@+id/Login_button_ingresarconface"
                android:layout_toRightOf="@+id/txtdbEmail"
                android:layout_toEndOf="@+id/txtdbEmail"
                android:layout_marginBottom="75dp"
                android:textColorHint="@android:color/white"
                android:textColorLink="@android:color/white"
                android:layout_gravity="center_horizontal"
                android:background="#ff21a3ff" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:text="@string/Login_button_ingresarconface"
        android:id="@+id/Login_button_ingresarconface"
        android:layout_above="@+id/txtdbPasswd"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="160dp"
        android:background="#ff21a3ff"
        android:onClick="clicFace" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="email"
        android:id="@+id/txtdbEmail"
        android:layout_alignTop="@+id/txtdbPasswd"
        android:visibility="invisible" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="contraseña"
        android:id="@+id/txtdbPasswd"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:visibility="invisible" />
</RelativeLayout>