<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ff1490ff">



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Perfil de Usuario"
            android:id="@+id/textView6"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textColor="@android:color/white"
            android:layout_row="0"
            android:layout_column="0" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/perfil_textView_nombre"
        android:id="@+id/perfil_textView_nombre"
        android:layout_below="@+id/textView6"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_row="1"
        android:layout_column="0" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editText"
        android:layout_row="1"
        android:layout_column="1" />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/perfil_textView_sexo"
            android:text="@string/perfil_textView_sexo"
        android:layout_row="2"
        android:layout_column="0" />

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/perfil_editText_Name"
            android:layout_row="2"
            android:layout_column="1" />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/perfil_textView_edad"
            android:id="@+id/perfil_textView_edad"
            android:layout_below="@+id/perfil_textView_nombre"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_row="3"
            android:layout_column="0" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/editText2"
        android:layout_row="3"
        android:layout_column="1" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Guardar"
        android:id="@+id/button"
        android:layout_row="4"
        android:layout_column="1"
        android:onClick="clickeo" />


</GridLayout>